src/Test/Fixtures/Good/Arrays/negativeI128ArrayDeclaration.lf
let ints : [i128; 3] = - [1, 2, 3];