src/Test/Fixtures/Bad/Arrays/missingCommaInArrayLiteralDeclaration.lf
let ints: [i32; 3] = [1 2, 3];